--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "name": "astro-lounge",
   "scripts": {
     "start": "browser-sync start --server public --files public",
-    "deploy": "echo 'To setup deployment run: yarn setup-deploy'",
-    "setup-deploy": "app-app --deploy && yarn deploy"
+    "deploy": "netlify deploy --prod --dir=public",
+    "setup-deploy": "app-app --deploy && yarn deploy",
+    "postdeploy": "echo 'Your site was deployed to https://astro-lounge-honeybook.netlify.com'"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -25,5 +26,6 @@
     "prettier": "^1.19.1",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0"
-  }
+  },
+  "homepage": "https://astro-lounge-honeybook.netlify.com"
 }
